// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserMenu /> should render properly 1`] = `
.emotion-5 {
  margin-right: -12px;
}

.emotion-4 {
  position: relative;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px 8px;
  color: #73b61c;
  font-weight: 400;
  height: 100%;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover {
  background-color: #3b3b3b;
}

.emotion-3:hover {
  cursor: pointer;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  margin: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #252525;
  background-color: #808080;
  font-weight: 700;
}

.emotion-1 {
  margin-left: 8px;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <button
      aria-label="Open user menu"
      className="emotion-3"
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-0"
        >
          JD
        </div>
        <svg
          className="emotion-1"
          color="#808080"
          data-file-name="chevron.svg"
          width={20}
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<UserMenu /> should render properly 2`] = `
.emotion-10 {
  margin-right: -12px;
}

.emotion-9 {
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px 8px;
  color: #73b61c;
  font-weight: 400;
  height: 100%;
  background-color: #3b3b3b;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover {
  background-color: #3b3b3b;
}

.emotion-3:hover {
  cursor: pointer;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  margin: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #ffffff;
  background-color: #252525;
  font-weight: 700;
}

.emotion-1 {
  margin-left: 8px;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-8 {
  position: absolute;
  z-index: 1;
  top: 100%;
  right: 0;
  background-color: #808080;
  border-radius: 2px;
  box-shadow: 0 4px 7px 0 #000000;
  width: 200px;
}

.emotion-8 ul {
  list-style-type: none;
  padding: 0;
  padding-top: 4px;
  padding-bottom: 8px;
  margin: 0;
}

.emotion-8 li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  padding: 16px;
  padding-bottom: 24px;
  border-bottom: 1px solid #b3b3b3;
}

.emotion-4 {
  font-weight: 700;
}

.emotion-6 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px 16px;
  font-weight: 400;
  border-radius: 0;
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-6:hover {
  background-color: #4a4a4a;
}

<div
  className="emotion-10"
>
  <div
    className="emotion-9"
  >
    <button
      aria-label="Open user menu"
      className="emotion-3"
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-0"
        >
          JD
        </div>
        <svg
          className="emotion-1"
          color="#808080"
          data-file-name="chevron.svg"
          width={20}
        />
      </div>
    </button>
    <div
      className="emotion-8"
    >
      <div>
        <div
          className="emotion-5"
        >
          <div
            className="emotion-4"
          >
            Jane Doe
          </div>
          <div>
            jane.doe@zorroa.com
          </div>
        </div>
        <ul>
          <li>
            <a
              className="emotion-6"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/account"
              onBlur={[Function]}
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Manage Account
            </a>
          </li>
          <li>
            <button
              className="emotion-6"
              onBlur={[Function]}
              onClick={[Function]}
              type="button"
            >
              Sign Out
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserMenu /> should render properly without firstName/lastName 1`] = `
.emotion-5 {
  margin-right: -12px;
}

.emotion-4 {
  position: relative;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px 8px;
  color: #73b61c;
  font-weight: 400;
  height: 100%;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover {
  background-color: #3b3b3b;
}

.emotion-3:hover {
  cursor: pointer;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  margin: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #252525;
  background-color: #808080;
  font-weight: 700;
}

.emotion-1 {
  margin-left: 8px;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <button
      aria-label="Open user menu"
      className="emotion-3"
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-0"
        >
          
        </div>
        <svg
          className="emotion-1"
          color="#808080"
          data-file-name="chevron.svg"
          width={20}
        />
      </div>
    </button>
  </div>
</div>
`;
